base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sira
  namespace: sira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sira
  template:
    metadata:
      labels:
        app: sira
    spec:
      imagePullSecrets:
        - name: harbor-login
      containers:
        - name: sira
          image: boo3vgog.gra7.container-registry.ovh.net/sira-k8s/sira:6.0.1
          volumeMounts:
            - name: sira-data
              mountPath: /usr/src/redmine/files
            - name: sira-configfile
              mountPath: /usr/src/redmine/config/configuration.yml
              subPath: configuration.yml
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60 # Initial delay before the first probe
            periodSeconds: 20       # Interval between probes
            timeoutSeconds: 5       # Timeout for each probe
            failureThreshold: 3     # Number of consecutive failures before marking as failed
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30 # Initial delay before the first probe
            periodSeconds: 20       # Interval between probes
            timeoutSeconds: 5       # Timeout for each probe
            failureThreshold: 3     # Number of consecutive failures before marking as not ready
      volumes:
        - name: sira-data
          persistentVolumeClaim:
            claimName: sira-data-pvc
        - name: sira-configfile
          configMap:
            name: sira-configfile
