base/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: sira
  namespace: sira
spec:
  selector:
    app: sira
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
