base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sira-ingress
  namespace: sira
spec:
  ingressClassName: nginx
  rules:
    - host: sira.grupocic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sira
                port:
                  number: 3000
  tls:
    - hosts:
        - sira.grupocic.dev
      secretName: sira-tls-secret
